# fighting-game

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANUAL_TEST_CHECKLIST.md  PROGRESS.md  QUICK_TEST_GUIDE.md  README.md  RUST_INSTALLATION.md  SESSION_REPORT.md  SUMMARY.md  TEST_REPORT.md
assets/characters/: ryu.ron
assets/moves/: ryu_crouch_hp.ron  ryu_crouch_lp.ron  ryu_crouch_mp.ron  ryu_hadoken.ron  ryu_jump_hp.ron  ryu_jump_lp.ron  ryu_jump_mp.ron  ryu_shinku_hadoken.ron  ryu_shoryuken.ron  ryu_stand_hp.ron  ryu_stand_lp.ron  ryu_stand_mp.ron  ryu_tatsumaki.ron
assets/mugen/: README.md
assets/mugen/kyo/: kyo.sff  kyo03.act  kyo04.act  kyo06.act
assets/sprites/: ken_atlas.ron  ryu_atlas.ron  test_fighter_atlas.json
assets/stages/: dojo.ron  street.ron
crates/tickle_assets/: Cargo.toml  README.md
crates/tickle_assets/src/: lib.rs
crates/tickle_audio/: Cargo.toml  README.md
crates/tickle_audio/src/: lib.rs
crates/tickle_core/: Cargo.toml  README.md
crates/tickle_core/src/: character_select.rs  components.rs  input.rs  lib.rs  math.rs  state_constants.rs  state_machine.rs
crates/tickle_core/src/systems/: animation.rs  audio_events.rs  collision.rs  combat.rs  mod.rs  physics.rs
crates/tickle_core/tests/: core_bench.rs
crates/tickle_mugen/: Cargo.toml
crates/tickle_mugen/src/: act.rs  air.rs  atlas.rs  cmd.rs  cns.rs  command_recognizer.rs  common_states.rs  def.rs  error.rs  lib.rs  mugen_controller.rs  sff_v1.rs  snd.rs  trigger.rs
crates/tickle_mugen/tests/: cmd_test.rs  cns_test.rs  def_test.rs  trigger_test.rs
crates/tickle_network/: Cargo.toml  README.md
crates/tickle_network/src/: lib.rs  snapshot.rs
crates/tickle_network/tests/: determinism_test.rs
crates/tickle_render/: Cargo.toml  README.md
crates/tickle_render/examples/: clear_screen.rs  sprite_batch.rs
crates/tickle_render/src/: context.rs  debug_lines.wgsl  debug_renderer.rs  lib.rs  shaders.wgsl  sprite_batch.rs  texture.rs
docs/: 01-game-design.md  02-engine-comparison-extended.md  02-engine-comparison.md  03-technical-architecture.md  04-network-architecture.md  05-roadmap.md  06-custom-engine-analysis.md  07-zig-tech-stack.md  08-final-decision-analysis.md  09-engine-technical-specs.md  10-development-todo.md  11-high-refresh-rate-support.md  12-visual-design-specs.md  13-polish-todo.md  14-v0.2.0-completion-report.md  15-sprite-resource-analysis.md  README.md  mugen-support.md  project-goals.md
docs/design/: pillars.md  todo.md
docs/review/: 01-issues.md  02-issues-continued.md  03-sprite-rendering-issues.md  04-mugen-format-research.md  05-frame-based-sprite-design.md  06-sff-v2-implementation.md  07-a-series-completion-summary.md  tasks.md
docs/todo/: mugen-implementation.md
game/: Cargo.toml
game/examples/: text_minimal.rs
game/src/: game_loop.rs  main.rs  menu.rs  quad_renderer.rs  stage.rs  text_renderer.rs  ui.rs
game/tests/: integration_test.rs  perf_test.rs
mugen_resources/KyoKusanagi[SuzukiInoue]/: KyoKusanagi[SuzukiInoue].def  command.txt  kyo.air  kyo.cmd  kyo.cns  kyo.snd  kyo01.act  kyo02.act  kyo05.act  read me.txt
tools/game-test/: Cargo.toml
tools/game-test/src/: main.rs
