[package]
name = "tickle_network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tickle_core = { path = "../tickle_core" }
ggrs = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
